--- a/src/Components/MyProjectsCard/MyProjectsCard.css
+++ b/src/Components/MyProjectsCard/MyProjectsCard.css
@@ -13,7 +13,8 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 2%;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .my-projects-card {
