--- a/src/Components/AboutCard/AboutCard.css
+++ b/src/Components/AboutCard/AboutCard.css
@@ -62,7 +62,7 @@
 
 @media (max-width: 950px) {
   #about {
-    padding: 40px 10%;
+    padding: 40px 5%;
     gap: 20px;
   }
 
@@ -90,12 +90,12 @@
 
 @media (max-width: 700px) {
   #about {
-    padding: 30px 10%;
+    padding: 30px 5%;
     gap: 15px;
   }
 
   #about :nth-child(2) {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .about-texts {
@@ -103,13 +103,41 @@
   }
 
   .about-texts > :first-child {
-    font-size: 22px;
+    font-size: 26px;
     font-weight: 500;
   }
 
   .about-texts > :nth-child(2) {
-    font-size: 10px;
+    font-size: 16px;
     font-weight: 400;
+  }
+
+  .home-social-link > svg {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 550px) {
+  #about {
+    padding: 20px 5%;
+    gap: 15px;
+  }
+
+  #about :nth-child(2) {
+    font-size: 12px;
+  }
+
+  .about-texts {
+    gap: 5px;
+  }
+
+  .about-texts > :first-child {
+    font-size: 16px;
+  }
+
+  .about-texts > :nth-child(2) {
+    font-size: 10px;
   }
 
   .home-social-link > svg {
@@ -118,10 +146,9 @@
   }
 }
 
-@media (max-width: 550px) {
+/* @media (max-width: 450px) {
   #about {
-    padding: 20px 10%;
-    gap: 15px;
+    padding: 20px 5%;
   }
 
   #about :nth-child(2) {
@@ -144,31 +171,4 @@
     width: 15px;
     height: 15px;
   }
-}
-
-@media (max-width: 450px) {
-  #about {
-    padding: 20px 10%;
-  }
-
-  #about :nth-child(2) {
-    font-size: 10px;
-  }
-
-  .about-texts {
-    gap: 5px;
-  }
-
-  .about-texts > :first-child {
-    font-size: 14px;
-  }
-
-  .about-texts > :nth-child(2) {
-    font-size: 7px;
-  }
-
-  .home-social-link > svg {
-    width: 15px;
-    height: 15px;
-  }
-}
+} */
