--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -22,7 +22,7 @@
 }
 
 .nav-links {
-  width: 35%;
+  width: 40%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -56,9 +56,53 @@
   width: 100%;
 }
 
+.drawer {
+  width: 300px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  gap: 20px;
+  background-color: #144488;
+}
+
+.drawer > a {
+  width: 100%;
+  display: flex;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.drawer > a.active {
+  color: #fff;
+  background-color: #000;
+}
+
+.drawer-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 145%;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.nav-logo-drawer {
+  cursor: pointer;
+  width: 50%;
+}
+
+.nav-logo-drawer > img {
+  width: 100%;
+}
+
 @media (max-width: 1200px) {
   .nav-links {
-    width: 45%;
+    width: 50%;
   }
 }
 
@@ -68,7 +112,7 @@
   }
 
   .nav-links {
-    width: 50%;
+    width: 60%;
   }
 
   .nav-links > a {
@@ -90,51 +134,9 @@
     width: 15%;
   }
 
-  .nav-logo-drawer {
-    cursor: pointer;
-    width: 50%;
-  }
-
-  .nav-logo-drawer > img {
-    width: 100%;
-  }
-
   .nav-menu {
     width: 5%;
     display: flex;
-  }
-
-  .drawer {
-    width: 300px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    gap: 20px;
-    background-color: #144488;
-  }
-
-  .drawer > a {
-    width: 100%;
-    display: flex;
-    text-align: center;
-    color: #000000;
-    background-color: #ffffff;
-  }
-
-  .drawer > a.active {
-    color: #fff;
-    background-color: #000;
-  }
-
-  .drawer-text > p {
-    width: 100%;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 145%;
-    letter-spacing: 1px;
-    text-align: center;
   }
 }
 
@@ -148,7 +150,7 @@
     gap: 20px;
   }
 
-  .drawer-text > p {
+  .drawer-text {
     font-size: 10px;
     letter-spacing: 0.8px;
   }
