--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: #000000;
+  box-shadow: 9px 7px 9px -2px rgba(34, 60, 80, 0.2);
 }
 
 .nav-logo {
