--- a/src/Components/Feedback/Feedback.css
+++ b/src/Components/Feedback/Feedback.css
@@ -1,13 +1,22 @@
 #feedback {
   width: 100%;
+  padding: 3%;
+  gap: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+#feedback > p {
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 140%;
+}
+
 .feedback-form {
-  max-width: 400px;
+  max-width: 600px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -19,14 +28,14 @@
 .feedback-form > input,
 textarea {
   width: 100%;
-  height: 40px;
+  height: 50px;
   border: none;
   outline: none;
   background: #abb2bf;
   border-radius: 10px;
   padding: 5px 10px;
 
-  font-size: 14px;
+  font-size: 16px;
   line-height: 135%;
   font-weight: 400;
   color: #000;
@@ -41,11 +50,69 @@ textarea {
 }
 
 .feedback-form :nth-child(3) {
-  height: 80px;
+  height: 160px;
 }
 
 .feedback-form > button {
   width: 100%;
-  height: 40px;
+  height: 50px;
   border-radius: 10px;
- }
+
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 121%;
+}
+
+@media (max-width: 750px) {
+  .feedback-form {
+    gap: 10px;
+  }
+
+  #feedback > p {
+    font-size: 16px;
+  }
+
+  .feedback-form > input,
+  textarea {
+    height: 40px;
+    padding: 5px 10px;
+    font-size: 14px;
+  }
+
+  .feedback-form :nth-child(3) {
+    height: 140px;
+  }
+
+  .feedback-form > button {
+    height: 50px;
+
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 450px) {
+  .feedback-form {
+    gap: 6px;
+  }
+
+  #feedback > p {
+    font-size: 12px;
+  }
+
+  .feedback-form > input,
+  textarea {
+    height: 40px;
+    padding: 5px 10px;
+    font-size: 14px;
+  }
+
+  .feedback-form :nth-child(3) {
+    height: 120px;
+  }
+
+  .feedback-form > button {
+    height: 40px;
+
+    font-size: 14px;
+  }
+}
