fixed feedback css

--- a/src/Components/Feedback/Feedback.css
+++ b/src/Components/Feedback/Feedback.css
@@ -53,10 +53,17 @@ textarea::placeholder {
   width: 100%;
   height: 50px;
   border-radius: 10px;
+  background: none;
+  border: 1px solid #c778dd;
 
   font-weight: 500;
   font-size: 18px;
   line-height: 121%;
+  transition: 0.2s ease-in-out;
+}
+
+.feedback-form > button:hover {
+  background: #c778dd;
 }
 
 @media (max-width: 750px) {
