--- a/src/Components/MyProjectsCard/MyProjectsCard.css
+++ b/src/Components/MyProjectsCard/MyProjectsCard.css
@@ -37,10 +37,11 @@
 
 .my-projects-actions {
   width: 100%;
-  padding: 2px 5%;
+  padding: 5px 5%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #abb2bf7c;
 }
 
 .my-projects-actions > figure {
